--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "client": "cd.. && cd client && yarn start",
     "start": "node index.js",
     "devStart": "nodemon index.js",
+    "server": "cd server && npm run devStart",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run client\" \"npm run devStart\" " 
   },
   "author": "",
   "license": "ISC",
@@ -19,3 +22,4 @@
     "nodemon": "^2.0.7"
   }
 }
+
