--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
